# songrec-lib

./: Cargo.toml  FINAL_COMPLETION_SUMMARY.md  FIX_SUMMARY.md  README.md  README_HEADLESS.md  REFACTORING_SUMMARY.md  WINDOWS_TEST_RESULTS.md  test_songrec.ps1  test_windows.ps1  test_windows_simple.ps1
examples/: README.md  device_usage.rs  library_demo.rs  library_usage.rs
src/: config.rs  lib.rs  output.rs  recognition.rs  songrec.rs  test_tls.rs
src/audio/: mod.rs  processor.rs  recorder.rs
src/fingerprinting/: algorithm.rs  communication.rs  signature_format.rs
tests/: integration_tests.rs
