[package]
name = "songrec"
license = "GPL-3.0+"
description = "A headless Shazam client library and CLI for cross-platform audio recognition"
homepage = "https://github.com/marin-m/SongRec"
repository = "https://github.com/marin-m/SongRec"
readme = "README_HEADLESS.md"
keywords = ["shazam", "audio", "audio-fingerprinting", "music-recognition", "headless"]
categories = ["multimedia::audio", "command-line-utilities", "api-bindings"]
version = "0.4.3"
authors = ["marin-m"]
edition = "2018"

[lib]
name = "songrec"
path = "src/lib.rs"

[[bin]]
name = "songrec-cli"
path = "src/bin/songrec-cli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chfft = "0.3.4" # Fast Fourier transform
byteorder = "1.3.4" # Used for reading and writing binary structures
crc32fast = "1.2.0" # Used for the CRC-32 checksum in the binary signature
base64 = "0.12.3"
reqwest = { version = "0.11.24", features = ["blocking", "json", "rustls-tls"], default-features = false }
rodio = { version = "0.20.1", features = ["mp3", "vorbis", "flac", "symphonia"] } # For reading audio files and resampling
clap = "2.33.2" # For argument parsing
cpal = "0.15.3" # For recording audio
serde_json = "1.0" # For decoding and encoding JSON
uuid = { version = "0.8.1", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.7.3"
chrono = { version = "0.4.13", features = ["serde"] } # For formatting dates
toml = "0.4.2"

[features]
default = []
ffmpeg = []

